Fixed: tooltip text too small to read

--- a/OmniArt-Framework/app/static/css/tooltip.css
+++ b/OmniArt-Framework/app/static/css/tooltip.css
@@ -8,7 +8,7 @@
     position: absolute;
     color: gray;
     border: 1px solid gray;
-    font-size: 1.1em;
+    font-size: 1em;
     text-align: left;
     padding: 8px;
     background: white;
@@ -16,7 +16,6 @@
     pointer-events: none;
     display: none;
     z-index: 1021;
-    font-size: 5px;
 }
 
 .grid line {
